PL3/gramaticaParser.java
// Generated from gramaticaParser.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PCLAVE_ALGORITMO=1, PCLAVE_DEFINIR=2, PCLAVE_COMO=3, PCLAVE_LEER=4, PCLAVE_ESCRIBIR=5, 
		PCLAVE_SI=6, PCLAVE_SINO=7, PCLAVE_ENTONCES=8, PCLAVE_FINSI=9, PCLAVE_PARA=10, 
		PCLAVE_HASTA=11, PCLAVE_PASO=12, PCLAVE_HACER=13, PCLAVE_FINPARA=14, PCLAVE_MIENTRAS=15, 
		PCLAVE_FINMIENTRAS=16, PCLAVE_REPETIR=17, PCLAVE_HASTAQUE=18, PCLAVE_SEGUN=19, 
		PCLAVE_DEOTROMODO=20, PCLAVE_FINSEGUN=21, PCLAVE_FINALGORITMO=22, PCLAVE_FUNCION=23, 
		PCLAVE_FINFUNCION=24, VERDADERO=25, FALSO=26, CARACTER=27, ENTERO=28, 
		REAL=29, LOGICO=30, DIMENSION=31, INT=32, FLOAT=33, IDENTIFICADOR=34, 
		PI=35, PD=36, CI=37, CD=38, FIN=39, COMA=40, DOS_PUNTOS=41, ASIGNACION=42, 
		MENOR_QUE=43, MAYOR_QUE=44, IGUAL_QUE=45, DISTINTO_QUE=46, MAYOR_IGUAL_QUE=47, 
		MENOR_IGUAL_QUE=48, AND=49, OR=50, SUMA=51, RESTA=52, MULTIPLICACION=53, 
		DIVISION=54, POTENCIA=55, CADENA_CARACTERES=56, TERMINAL=57, WS=58, SALTO=59, 
		COMENTARIOABRIR=60, COMENTARIOLINEA=61, COMENTARIOCERRAR=62, TEXTOCOMENTARIOML=63, 
		FINAL_COMENTARIO_UL=64, TEXTOCOMENTARIOUL=65;
	public static final int
		RULE_prog = 0, RULE_pr_algoritmo = 1, RULE_pr_definir = 2, RULE_pr_como = 3, 
		RULE_pr_leer = 4, RULE_pr_escribir = 5, RULE_pr_si = 6, RULE_pr_sino = 7, 
		RULE_pr_entonces = 8, RULE_pr_finsi = 9, RULE_pr_para = 10, RULE_pr_hasta = 11, 
		RULE_pr_paso = 12, RULE_pr_hacer = 13, RULE_pr_finpara = 14, RULE_pr_mientras = 15, 
		RULE_pr_finmientras = 16, RULE_pr_repetir = 17, RULE_pr_hastaque = 18, 
		RULE_pr_segun = 19, RULE_pr_deotromodo = 20, RULE_pr_finsegun = 21, RULE_pr_finalgoritmo = 22, 
		RULE_pr_funcion = 23, RULE_pr_finfuncion = 24, RULE_tipo_de_datos = 25, 
		RULE_numero = 26, RULE_identificador = 27, RULE_var = 28, RULE_op_menor = 29, 
		RULE_op_mayor = 30, RULE_op_igual = 31, RULE_op_distinto = 32, RULE_op_mayor_igual = 33, 
		RULE_op_menor_igual = 34, RULE_op_or = 35, RULE_op_and = 36, RULE_op_asignacion = 37, 
		RULE_op_suma = 38, RULE_op_resta = 39, RULE_op_multiplicacion = 40, RULE_op_division = 41, 
		RULE_op_potencia = 42, RULE_comparacion = 43, RULE_operador_matematico = 44, 
		RULE_condicion_logica = 45, RULE_operacion_logica = 46, RULE_operacion = 47, 
		RULE_fin = 48, RULE_coma = 49, RULE_dos_puntos = 50, RULE_parentesis_izq = 51, 
		RULE_parentesis_der = 52, RULE_corchete_izq = 53, RULE_corchete_der = 54, 
		RULE_signo_puntuacion = 55, RULE_asignacion = 56, RULE_escritura = 57, 
		RULE_lectura = 58, RULE_definicion = 59, RULE_dimension = 60, RULE_parametros = 61, 
		RULE_parametros_funcion = 62, RULE_dev_funcion = 63, RULE_interior = 64, 
		RULE_linea = 65, RULE_condicion_si = 66, RULE_cabecera_si = 67, RULE_cuerpo_si = 68, 
		RULE_bucle = 69, RULE_bucle_mientras = 70, RULE_cabecera_mientras = 71, 
		RULE_cuerpo_mientras = 72, RULE_bucle_para = 73, RULE_cabecera_para = 74, 
		RULE_cuerpo_para = 75, RULE_bucle_repetir = 76, RULE_cabecera_repetir = 77, 
		RULE_cuerpo_repetir = 78, RULE_condicion_repetir = 79, RULE_segun = 80, 
		RULE_cabecera_segun = 81, RULE_tipo_segun = 82, RULE_tipo_deotromodo = 83, 
		RULE_cuerpo_segun = 84, RULE_funcion = 85, RULE_cabecera_funcion = 86, 
		RULE_nombre_funcion = 87, RULE_cuerpo_funcion = 88, RULE_llamada_funcion = 89, 
		RULE_textos = 90, RULE_comentario = 91;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "pr_algoritmo", "pr_definir", "pr_como", "pr_leer", "pr_escribir", 
			"pr_si", "pr_sino", "pr_entonces", "pr_finsi", "pr_para", "pr_hasta", 
			"pr_paso", "pr_hacer", "pr_finpara", "pr_mientras", "pr_finmientras", 
			"pr_repetir", "pr_hastaque", "pr_segun", "pr_deotromodo", "pr_finsegun", 
			"pr_finalgoritmo", "pr_funcion", "pr_finfuncion", "tipo_de_datos", "numero", 
			"identificador", "var", "op_menor", "op_mayor", "op_igual", "op_distinto", 
			"op_mayor_igual", "op_menor_igual", "op_or", "op_and", "op_asignacion", 
			"op_suma", "op_resta", "op_multiplicacion", "op_division", "op_potencia", 
			"comparacion", "operador_matematico", "condicion_logica", "operacion_logica", 
			"operacion", "fin", "coma", "dos_puntos", "parentesis_izq", "parentesis_der", 
			"corchete_izq", "corchete_der", "signo_puntuacion", "asignacion", "escritura", 
			"lectura", "definicion", "dimension", "parametros", "parametros_funcion", 
			"dev_funcion", "interior", "linea", "condicion_si", "cabecera_si", "cuerpo_si", 
			"bucle", "bucle_mientras", "cabecera_mientras", "cuerpo_mientras", "bucle_para", 
			"cabecera_para", "cuerpo_para", "bucle_repetir", "cabecera_repetir", 
			"cuerpo_repetir", "condicion_repetir", "segun", "cabecera_segun", "tipo_segun", 
			"tipo_deotromodo", "cuerpo_segun", "funcion", "cabecera_funcion", "nombre_funcion", 
			"cuerpo_funcion", "llamada_funcion", "textos", "comentario"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Algoritmo'", null, "'Como'", "'Leer'", "'Escribir'", "'Si'", 
			"'SiNo'", "'Entonces'", null, "'Para'", null, "'con paso'", "'Hacer'", 
			"'FinPara'", "'Mientras'", null, "'Repetir'", "'Hasta Que'", "'Segun'", 
			"'De Otro Modo'", "'FinSegun'", "'FinAlgoritmo'", "'Funcion'", null, 
			"'Verdadero'", "'Falso'", "'Caracter'", "'Entero'", "'Real'", "'Logico'", 
			null, null, null, null, "'('", "')'", "'['", "']'", "';'", "','", "':'", 
			"'<-'", "'<'", "'>'", "'='", null, "'>='", "'<='", null, null, "'+'", 
			"'-'", "'*'", "'/'", "'^'", null, null, "' '", null, "'/**'", "'//'", 
			"'**/'", null, "'\r\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PCLAVE_ALGORITMO", "PCLAVE_DEFINIR", "PCLAVE_COMO", "PCLAVE_LEER", 
			"PCLAVE_ESCRIBIR", "PCLAVE_SI", "PCLAVE_SINO", "PCLAVE_ENTONCES", "PCLAVE_FINSI", 
			"PCLAVE_PARA", "PCLAVE_HASTA", "PCLAVE_PASO", "PCLAVE_HACER", "PCLAVE_FINPARA", 
			"PCLAVE_MIENTRAS", "PCLAVE_FINMIENTRAS", "PCLAVE_REPETIR", "PCLAVE_HASTAQUE", 
			"PCLAVE_SEGUN", "PCLAVE_DEOTROMODO", "PCLAVE_FINSEGUN", "PCLAVE_FINALGORITMO", 
			"PCLAVE_FUNCION", "PCLAVE_FINFUNCION", "VERDADERO", "FALSO", "CARACTER", 
			"ENTERO", "REAL", "LOGICO", "DIMENSION", "INT", "FLOAT", "IDENTIFICADOR", 
			"PI", "PD", "CI", "CD", "FIN", "COMA", "DOS_PUNTOS", "ASIGNACION", "MENOR_QUE", 
			"MAYOR_QUE", "IGUAL_QUE", "DISTINTO_QUE", "MAYOR_IGUAL_QUE", "MENOR_IGUAL_QUE", 
			"AND", "OR", "SUMA", "RESTA", "MULTIPLICACION", "DIVISION", "POTENCIA", 
			"CADENA_CARACTERES", "TERMINAL", "WS", "SALTO", "COMENTARIOABRIR", "COMENTARIOLINEA", 
			"COMENTARIOCERRAR", "TEXTOCOMENTARIOML", "FINAL_COMENTARIO_UL", "TEXTOCOMENTARIOUL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramaticaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> TERMINAL() { return getTokens(gramaticaParser.TERMINAL); }
		public TerminalNode TERMINAL(int i) {
			return getToken(gramaticaParser.TERMINAL, i);
		}
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PCLAVE_ALGORITMO) | (1L << PCLAVE_FUNCION) | (1L << COMENTARIOABRIR) | (1L << COMENTARIOLINEA))) != 0)) {
				{
				{
				setState(186);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PCLAVE_ALGORITMO:
				case PCLAVE_FUNCION:
					{
					setState(184);
					funcion();
					}
					break;
				case COMENTARIOABRIR:
				case COMENTARIOLINEA:
					{
					setState(185);
					comentario();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(188);
				match(TERMINAL);
				}
				}
				setState(194);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_algoritmoContext extends ParserRuleContext {
		public TerminalNode PCLAVE_ALGORITMO() { return getToken(gramaticaParser.PCLAVE_ALGORITMO, 0); }
		public Pr_algoritmoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_algoritmo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).enterPr_algoritmo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).exitPr_algoritmo(this);
		}
	}

	public final Pr_algoritmoContext pr_algoritmo() throws RecognitionException {
		Pr_algoritmoContext _localctx = new Pr_algoritmoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pr_algoritmo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			match(PCLAVE_ALGORITMO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_definirContext extends ParserRuleContext {
		public TerminalNode PCLAVE_DEFINIR() { return getToken(gramaticaParser.PCLAVE_DEFINIR, 0); }
		public Pr_definirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_definir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).enterPr_definir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).exitPr_definir(this);
		}
	}

	public final Pr_definirContext pr_definir() throws RecognitionException {
		Pr_definirContext _localctx = new Pr_definirContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pr_definir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			match(PCLAVE_DEFINIR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_comoContext extends ParserRuleContext {
		public TerminalNode PCLAVE_COMO() { return getToken(gramaticaParser.PCLAVE_COMO, 0); }
		public Pr_comoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_como; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).enterPr_como(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).exitPr_como(this);
		}
	}

	public final Pr_comoContext pr_como() throws RecognitionException {
		Pr_comoContext _localctx = new Pr_comoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pr_como);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			match(PCLAVE_COMO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_leerContext extends ParserRuleContext {
		public TerminalNode PCLAVE_LEER() { return getToken(gramaticaParser.PCLAVE_LEER, 0); }
		public Pr_leerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_leer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).enterPr_leer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).exitPr_leer(this);
		}
	}

	public final Pr_leerContext pr_leer() throws RecognitionException {
		Pr_leerContext _localctx = new Pr_leerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pr_leer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			match(PCLAVE_LEER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_escribirContext extends ParserRuleContext {
		public TerminalNode PCLAVE_ESCRIBIR() { return getToken(gramaticaParser.PCLAVE_ESCRIBIR, 0); }
		public Pr_escribirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_escribir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).enterPr_escribir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).exitPr_escribir(this);
		}
	}

	public final Pr_escribirContext pr_escribir() throws RecognitionException {
		Pr_escribirContext _localctx = new Pr_escribirContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pr_escribir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			match(PCLAVE_ESCRIBIR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_siContext extends ParserRuleContext {
		public TerminalNode PCLAVE_SI() { return getToken(gramaticaParser.PCLAVE_SI, 0); }
		public Pr_siContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_si; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).enterPr_si(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).exitPr_si(this);
		}
	}

	public final Pr_siContext pr_si() throws RecognitionException {
		Pr_siContext _localctx = new Pr_siContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pr_si);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(205);
			match(PCLAVE_SI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_sinoContext extends ParserRuleContext {
		public TerminalNode PCLAVE_SINO() { return getToken(gramaticaParser.PCLAVE_SINO, 0); }
		public Pr_sinoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_sino; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).enterPr_sino(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).exitPr_sino(this);
		}
	}

	public final Pr_sinoContext pr_sino() throws RecognitionException {
		Pr_sinoContext _localctx = new Pr_sinoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pr_sino);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(207);
			match(PCLAVE_SINO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_entoncesContext extends ParserRuleContext {
		public TerminalNode PCLAVE_ENTONCES() { return getToken(gramaticaParser.PCLAVE_ENTONCES, 0); }
		public Pr_entoncesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_entonces; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).enterPr_entonces(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).exitPr_entonces(this);
		}
	}

	public final Pr_entoncesContext pr_entonces() throws RecognitionException {
		Pr_entoncesContext _localctx = new Pr_entoncesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_pr_entonces);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			match(PCLAVE_ENTONCES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_finsiContext extends ParserRuleContext {
		public TerminalNode PCLAVE_FINSI() { return getToken(gramaticaParser.PCLAVE_FINSI, 0); }
		public Pr_finsiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_finsi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).enterPr_finsi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).exitPr_finsi(this);
		}
	}

	public final Pr_finsiContext pr_finsi() throws RecognitionException {
		Pr_finsiContext _localctx = new Pr_finsiContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_pr_finsi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(211);
			match(PCLAVE_FINSI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_paraContext extends ParserRuleContext {
		public TerminalNode PCLAVE_PARA() { return getToken(gramaticaParser.PCLAVE_PARA, 0); }
		public Pr_paraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_para; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).enterPr_para(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).exitPr_para(this);
		}
	}

	public final Pr_paraContext pr_para() throws RecognitionException {
		Pr_paraContext _localctx = new Pr_paraContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_pr_para);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(213);
			match(PCLAVE_PARA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_hastaContext extends ParserRuleContext {
		public TerminalNode PCLAVE_HASTA() { return getToken(gramaticaParser.PCLAVE_HASTA, 0); }
		public Pr_hastaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_hasta; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaParserListener ) ((gramaticaParserListener)listener).enterPr_hasta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
